--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,13 @@ tqdm>=4.65.0
 # Logging
 coloredlogs>=15.0
 
+# Visualization
+matplotlib>=3.7.0
+seaborn>=0.12.0
+
+# System utilities
+psutil>=5.9.0
+
 # Testing (optional)
 pytest>=7.3.0
 pytest-cov>=4.1.0
