--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,8 @@ accelerate>=0.20.0
 
 # HuggingFace datasets
 # Note: CosmosQA requires datasets < 2.15.0 due to deprecated dataset scripts
-# If you need a newer version, you'll need to skip the 'rc' task or find an alternative dataset
-datasets>=2.14.0,<2.15.0
+# The loader has a fallback using trust_remote_code=True for newer versions
+datasets>=2.10.0,<2.15.0
 
 # Configuration and serialization
 pyyaml>=6.0
