Add file logging for benchmark runs
- Setup dual logging (console + file) in run_benchmark.py
- Log files saved to outputs/results/logs/benchmark_TIMESTAMP.log
- Update .gitignore to track log files in outputs directory
- Add .gitkeep to preserve logs directory structure
- Add 'nul' to .gitignore (Windows artifact)

Log files capture all INFO+ messages for post-run analysis.

--- a/.gitignore
+++ b/.gitignore
@@ -41,13 +41,16 @@ models/cache/
 *.bin
 *.safetensors
 
-# Logs
-*.log
+# Logs (except outputs/results/logs which we want to track)
 benchmark.log
 
 # NOTE: results/ and outputs/ are NOT gitignored
 # They contain benchmark results that must be preserved for analysis
 # since GPU instances use ephemeral storage
+# Log files in outputs/results/logs/ are tracked for analysis
+
+# Windows artifacts
+nul
 
 # OS
 .DS_Store
