Reorganize benchmark results into model subdirectories and update runner
- Organize results by model: tinyllama-1.1b, phi-2, stablelm-2-1.6b, gemma-2b-it
- Update run_benchmark.py to save results in model-specific subdirectories
- Regenerate visualizations from all 64 combined results
- Add combined all_results.json for visualization generation
- Remove deprecated root-level config and result files

--- a/outputs/results/tinyllama-1.1b/config_float32_20251207_172657.json
+++ b/outputs/results/tinyllama-1.1b/config_float32_20251207_172657.json
@@ -1,6 +1,6 @@
 {
   "models": [
-    "qwen-1.8b"
+    "tinyllama-1.1b"
   ],
   "tasks": [
     "qa",
@@ -10,7 +10,7 @@
     "ds"
   ],
   "dtypes": [
-    "float16"
+    "float32"
   ],
   "num_samples": 10000,
   "alpha": 0.1,
@@ -24,8 +24,8 @@
     "aps"
   ],
   "seed": 42,
-  "use_dynamic_batch_size": false,
-  "max_batch_size": 32,
+  "use_dynamic_batch_size": true,
+  "max_batch_size": null,
   "resume": false,
   "enable_profiling": true
 }
