Add claims verification analysis and prepare for submission
- Add src/analysis/ module with claims verification scripts
  - verify_claims.py: Statistical tests for paper's 3 claims
  - visualize_claims.py: Generate claim verification figures
  - generate_tables.py: Paper-style comparison tables
  - merge_results.py: Consolidate results from model directories

- Add claims verification results and figures
  - claims_analysis_*.json: Statistical analysis per method/dtype
  - comparison_tables.md: Comprehensive results tables
  - figures/claims/: Visualization of all 3 claims

- Add REPRODUCIBILITY.md with exact experimental setup

- Update README.md with claims verification findings:
  - Claim 1 (accuracy vs certainty): SUPPORTED
  - Claim 2 (model size vs uncertainty): NOT SUPPORTED on SLMs
  - Claim 3 (instruction-tuning effect): PARTIALLY SUPPORTED

- Add benchmark results: 8 models, 5 tasks, 140 experiments

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+*.pptx
 
 # IDE
 .vscode/
@@ -56,7 +57,7 @@ nul
 Thumbs.db
 
 .claude/
-# NOTE: CLAUDE.md is tracked (contains important project documentation)
+CLAUDE.md
 
 # Local setup scripts (contain user-specific config)
 startup.sh
